--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
+        "livewire/livewire": "^3.6",
         "spatie/array-to-xml": "^3.4",
         "spatie/laravel-permission": "^6.18"
     },
