--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vite": "^7.1.5"
     },
     "dependencies": {
+        "pnpm": "^10.16.1",
         "react": "^19.1.1",
         "react-dom": "^19.1.1"
     }
