--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,3 +1,7 @@
 onlyBuiltDependencies:
   - '@tailwindcss/oxide'
   - esbuild
+
+overrides:
+  glob@>=10.2.0 <10.5.0: '>=10.5.0'
+  vite@>=7.1.0 <=7.1.10: '>=7.1.11'
