feat: Agrega nuevas traducciones y actualiza el pie de página en welcome.blade.php para mejorar la experiencia del usuario

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@ yarn-error.log
 /.nova
 /.vscode
 /.zed
+/resources/utils/invitacion a capacitación.md
+/resources/utils/sql CONSULTA.fecha
 /resources/utils/parametros.xlsx
 /resources/utils/tablas/diciembre
 
