feat: mejorar formato de fecha en la vista de órdenes

--- a/.gitignore
+++ b/.gitignore
@@ -21,4 +21,7 @@ yarn-error.log
 /resources/utils/sql CONSULTA.fecha
 /resources/utils/parametros.xlsx
 /resources/utils/tablas/diciembre
+/resources/utils/tablas/2026/*
+
+
 
