--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@vitejs/plugin-react": "^5.1.1",
         "autoprefixer": "^10.4.22",
         "axios": "^1.13.2",
+        "baseline-browser-mapping": "^2.10.0",
         "concurrently": "^9.2.1",
         "laravel-vite-plugin": "^2.0.1",
         "postcss": "^8.5.6",
